tdf#83227 oox: reuse RelId in DML/VML export for the same graphic

So that large images are written only once to the ZIP container when
they are exported using both markups. This affects drawinglayer images,
the Writer ones are handled directly in sw and were already
deduplicated.

(cherry picked from commit b484e9814c66d8d51cea974390963a6944bc9d73)

Conflicts:
	oox/source/export/drawingml.cxx

Change-Id: Iff7c769329b42939833056b727b070f6a60da5e3
Reviewed-on: https://gerrit.libreoffice.org/18491
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>